[gd_scene load_steps=15 format=3 uid="uid://dg2dlbad7cfum"]

[ext_resource type="Script" path="res://house_yaga_space/content/enemy/enemy_base.gd" id="1_a5d8m"]
[ext_resource type="Texture2D" uid="uid://ctfpw1wrhsc18" path="res://house_yaga_space/resource/assets_red/84812dd1ce43340a.png" id="2_qroim"]
[ext_resource type="AudioStream" uid="uid://cuqam6j1aronb" path="res://house_yaga_space/resource/audio/FX/LaserShot7.wav" id="3_vsy4n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nsx4i"]
radius = 85.2115

[sub_resource type="Animation" id="Animation_dp2vy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Renderer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticlesDead:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Renderer:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:collision_layer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:collision_mask")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_hvjk8"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticlesDead:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Renderer:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:collision_layer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ynp1r"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.873175, 0, 0.155038, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Renderer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(5, 0), Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1sy6b"]
_data = {
"RESET": SubResource("Animation_dp2vy"),
"dead": SubResource("Animation_hvjk8"),
"hit": SubResource("Animation_ynp1r")
}

[sub_resource type="Gradient" id="Gradient_2y5k1"]
offsets = PackedFloat32Array(0, 0.438017, 0.743802, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.87218, 0.0897624, 9.62615e-08, 1, 0.560529, 0, 0.129925, 1, 0.560784, 0, 0.129412, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4xxt7"]
gradient = SubResource("Gradient_2y5k1")

[sub_resource type="Curve" id="Curve_ti75k"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.618926, 0.834151), 0.0, 0.0, 0, 0, Vector2(1, 0.0112855), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_b87d8"]
curve = SubResource("Curve_ti75k")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_d07sl"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_max = 296.08
orbit_velocity_min = -0.315
orbit_velocity_max = 0.787
gravity = Vector3(0, 0, 0)
linear_accel_min = -47.15
linear_accel_max = -0.52
damping_min = 1.76
damping_max = 1.76
scale_min = 11.5
scale_max = 35.55
scale_curve = SubResource("CurveTexture_b87d8")
color_ramp = SubResource("GradientTexture1D_4xxt7")
hue_variation_min = -0.04
hue_variation_max = 0.11

[sub_resource type="CircleShape2D" id="CircleShape2D_5f50y"]
radius = 109.005

[node name="EnemyBase" type="CharacterBody2D"]
collision_layer = 4
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_a5d8m")
speed = 5000.0
random_speed = 2000.0
teleport_distance_limit = 6000.0

[node name="Renderer" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="Renderer"]
position = Vector2(-5, 13)
scale = Vector2(4, 4)
texture = ExtResource("2_qroim")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, -24)
shape = SubResource("CircleShape2D_nsx4i")

[node name="AudioHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vsy4n")
volume_db = -20.0
bus = &"SFX"

[node name="AudioDead" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1sy6b")
}

[node name="GPUParticlesDead" type="GPUParticles2D" parent="."]
position = Vector2(0, -24)
emitting = false
amount = 128
process_material = SubResource("ParticleProcessMaterial_d07sl")
one_shot = true
explosiveness = 0.85
randomness = 0.1

[node name="TimerReload" type="Timer" parent="."]
one_shot = true

[node name="Area2DDamage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2DDamage"]
position = Vector2(-5, -24)
shape = SubResource("CircleShape2D_5f50y")

[connection signal="finished" from="AudioDead" to="." method="_on_audio_dead_finished"]
[connection signal="timeout" from="TimerReload" to="." method="_on_timer_reload_timeout"]
[connection signal="body_entered" from="Area2DDamage" to="." method="_on_area_2d_damage_body_entered"]
[connection signal="body_exited" from="Area2DDamage" to="." method="_on_area_2d_damage_body_exited"]
